--- a/CSS/output.css
+++ b/CSS/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-200: oklch(92.8% 0.006 264.531);
@@ -20,9 +21,12 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-3xl: 48rem;
+    --container-4xl: 56rem;
     --container-5xl: 64rem;
     --container-6xl: 72rem;
     --container-7xl: 80rem;
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
@@ -411,6 +415,9 @@
   .max-w-3xl {
     max-width: var(--container-3xl);
   }
+  .max-w-4xl {
+    max-width: var(--container-4xl);
+  }
   .max-w-5 {
     max-width: calc(var(--spacing) * 5);
   }
@@ -423,11 +430,29 @@
   .max-w-7xl {
     max-width: var(--container-7xl);
   }
+  .max-w-\[2px\] {
+    max-width: 2px;
+  }
+  .max-w-\[100px\] {
+    max-width: 100px;
+  }
+  .max-w-\[250px\] {
+    max-width: 250px;
+  }
+  .max-w-\[270px\] {
+    max-width: 270px;
+  }
+  .max-w-\[300px\] {
+    max-width: 300px;
+  }
   .max-w-\[420px\] {
     max-width: 420px;
   }
   .max-w-\[550px\] {
     max-width: 550px;
+  }
+  .max-w-\[px\] {
+    max-width: px;
   }
   .max-w-none {
     max-width: none;
@@ -614,6 +639,9 @@
   .bg-\[\#\] {
     background-color: #;
   }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
+  }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
   }
@@ -622,6 +650,9 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-gray-400 {
+    background-color: var(--color-gray-400);
   }
   .bg-gray-700 {
     background-color: var(--color-gray-700);
@@ -686,6 +717,9 @@
   .p-\[28px\] {
     padding: 28px;
   }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -743,6 +777,12 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
+  .pr-2 {
+    padding-right: calc(var(--spacing) * 2);
+  }
+  .pr-3 {
+    padding-right: calc(var(--spacing) * 3);
+  }
   .pb-\[12px\] {
     padding-bottom: 12px;
   }
@@ -769,6 +809,10 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -788,6 +832,9 @@
   .text-\[18px\] {
     font-size: 18px;
   }
+  .text-\[20px\] {
+    font-size: 20px;
+  }
   .text-\[22px\] {
     font-size: 22px;
   }
@@ -802,6 +849,12 @@
   }
   .text-\[42px\] {
     font-size: 42px;
+  }
+  .text-\[100px\] {
+    font-size: 100px;
+  }
+  .text-\[113px\] {
+    font-size: 113px;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -830,6 +883,9 @@
   }
   .text-\[\#555555\] {
     color: #555555;
+  }
+  .text-\[px\] {
+    color: px;
   }
   .text-gray-200 {
     color: var(--color-gray-200);
